--- a/lang/cmu_indic_lang/Makefile
+++ b/lang/cmu_indic_lang/Makefile
@@ -40,14 +40,17 @@ BUILD_DIRS =
 ALL_DIRS= 
 H = cmu_indic_lang.h cmu_indic_phrasing_cart.h \
     indic_num_table.h indic_eng_num_table.h \
+    indic_asm_num_table.h \
     indic_hin_num_table.h \
     indic_kan_num_table.h \
+    indic_mal_num_table.h \
     indic_mar_num_table.h \
     indic_guj_num_table.h \
+    indic_san_num_table.h \
     indic_tam_num_table.h \
     indic_tel_num_table.h \
-    indic_san_num_table.h \
-    indic_pan_num_table.h
+    indic_pan_num_table.h \
+    indic_ori_num_table.h
 SRCS = cmu_indic_lang.c cmu_indic_phoneset.c cmu_indic_phrasing_cart.c
 SCRIPTS = 
 OBJS = $(SRCS:.c=.o)
